--- a/src/components/PlayerBar.css
+++ b/src/components/PlayerBar.css
@@ -63,6 +63,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
+  transition: transform 150ms ease, opacity 150ms ease;
+}
+
+.track-cover:hover {
+  transform: scale(1.05);
+  opacity: 0.9;
+}
+
+.track-cover:active {
+  transform: scale(0.98);
 }
 
 .cover-image {
